<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@drawable/background_gradient_register"
    tools:context=".RegistroUsuario">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="0dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/seperator0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alert_cucucta_title" />

    <TextView
        android:id="@+id/seperator0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        app:layout_constraintBottom_toTopOf="@+id/registerU"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/registerU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registroU"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/seperator"
        app:layout_constraintTop_toBottomOf="@id/seperator0" />

    <TextView
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        app:layout_constraintTop_toBottomOf="@id/registerU"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seperator">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">


            <TextView
                android:id="@+id/titleCorreoU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/correoTitleU"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/correoU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:hint="@string/correoHolderU"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/seperatorn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleContrasenaU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/contrasenaTitleU"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/contrasenaU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:hint="@string/contrasenaHolderU"
                android:inputType="textPassword"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/seperator6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleNombreU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/nombreTitleU"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/nombreU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:hint="@string/nombreHolderU"
                android:inputType="text"
                android:selectAllOnFocus="true"
                android:textColor="@color/colorPrimaryDark" />


            <TextView
                android:id="@+id/seperator1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleApellidoU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/apellidoTitleU"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/apellidoU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:hint="@string/apellidoHolderU"
                android:inputType="text"
                android:selectAllOnFocus="true" />


            <TextView
                android:id="@+id/seperator2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleCedulaU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/cedulaTitleU"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/cedulaU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:hint="@string/apellidoHolderU"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/seperator3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleTelefonoU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/telefonoTitleU"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/telefonoU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:hint="@string/telefonoHolderU"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/seperator4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleDireccionU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/direccionTitleU"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/direccionU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:hint="@string/direccionHolderU"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/seperator7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleBarrioU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/barrioTitleU"
                android:textSize="18sp" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/barrioU"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp" />

            <Button
                android:id="@+id/registerUsuario"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btnRegistroUsario"
                android:textColor="#ffffff"/>

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>