<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistroAccidente"
    android:layout_margin="0dp"
    android:background="@drawable/background_gradient_register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="0dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/seperator0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alert_cucucta_title" />

    <TextView
        android:id="@+id/seperator0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        app:layout_constraintBottom_toTopOf="@+id/registerA"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="38dp"
        android:layout_height="35dp"
        android:background="#000000"
        android:contentDescription="@string/navBack"
        app:layout_constraintBottom_toTopOf="@+id/seperator"
        app:layout_constraintStart_toStartOf="@+id/registerA"
        app:layout_constraintTop_toBottomOf="@+id/seperator0"
        app:srcCompat="@drawable/previous"
        android:onClick="back"/>

    <TextView
        android:id="@+id/registerA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registroaccidente"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/seperator"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seperator0" />

    <TextView
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        app:layout_constraintTop_toBottomOf="@id/registerA"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seperator">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">


            <TextView
                android:id="@+id/titlebarrio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/barrioTitleU"
                android:textSize="18sp" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/barrioI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:background="@drawable/border"
                android:layout_marginEnd="12dp"
                android:selectAllOnFocus="true"
                android:textColor="@color/colorPrimaryDark" />


            <TextView
                android:id="@+id/seperator1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleDireccion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/direccionTitleU"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/direccionI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:hint="@string/direccionHolderI"
                android:inputType="text"
                android:selectAllOnFocus="true" />


            <TextView
                android:id="@+id/seperator2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleTipo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/tipoTitleA"
                android:textSize="18sp" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/tipoI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp" />

            <TextView
                android:id="@+id/seperator3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleDescripcion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/titleDescripcion"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/descripcionA"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:hint="@string/descripcionHolder"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="true"/>


            <TextView
                android:id="@+id/seperator4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleDescripcionVictima"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/descripcionVictimaTitle"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/descripcionVictima"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:ems="10"
                android:gravity="start|top"
                android:hint="@string/descripcionVictimaHolder"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="true" />
            <TextView
                android:id="@+id/seperator6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleHoraA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/horaTitle"
                android:textSize="18sp" />

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <Spinner
                android:id="@+id/horaA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp" />

            <Spinner
                android:id="@+id/horaB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp" />


            <Spinner
                android:id="@+id/time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp">
            </Spinner>

        </LinearLayout>

        <Button
                android:id="@+id/registerAccidnete"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btnRegistroAccidente"
                android:textColor="#ffffff" />

        </LinearLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>