<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegistroCAI"
    android:id="@+id/viewCAIRegistro"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="0dp"
    android:background="@drawable/background_gradient_register">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_margin="0dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintBottom_toTopOf="@id/seperator0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/alert_cucucta_title" />

    <TextView
        android:id="@+id/seperator0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        app:layout_constraintBottom_toTopOf="@+id/registerU"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/registerU"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registrcai"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@id/seperator"
        app:layout_constraintTop_toBottomOf="@id/seperator0" />

    <TextView
        android:id="@+id/seperator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_bottom"
        app:layout_constraintTop_toBottomOf="@id/registerU"
        app:layout_constraintBottom_toTopOf="@+id/scrollView2" />


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seperator">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="10dp"
            android:paddingEnd="10dp">

            <TextView
                android:id="@+id/seperator3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleTelefonoU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/telefonoTitleU"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/telefonoCAI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:hint="@string/telefonoHolderU"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/seperator6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleDireccionU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/direccionTitleU"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/direccionCAI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:autofillHints=""
                android:hint="@string/direccionHolderU"
                android:inputType="text"
                android:selectAllOnFocus="true" />

            <TextView
                android:id="@+id/seperator7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <TextView
                android:id="@+id/titleBarrioCAI"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:text="@string/barrioTitleU"
                android:textSize="18sp" />

            <com.toptoche.searchablespinnerlibrary.SearchableSpinner
                android:id="@+id/barrioCAI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp" />

            <TextView
                android:id="@+id/seperator8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/border_bottom" />

            <Button
                android:id="@+id/registro"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_gravity="center"
                android:layout_marginStart="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="48dp"
                android:layout_marginBottom="64dp"
                android:background="@color/colorPrimaryDark"
                android:text="@string/btnRegistroCAI"
                android:textColor="#ffffff"/>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>